# dc2019f-mirror-universe

./: .dockerignore  .gitignore  .travis.yml  README.md  info.yml  local_dev.sh  tester
local-tester/: Dockerfile  check_admin_accessible.sh  check_get_users.sh  check_size_same.py
remote-interaction/: Dockerfile  check.py  exploit.sh
service/: Dockerfile
service/deploy/: supervisord.conf
service/deploy/chaos/: FILE  MINI  chaosd  server
service/deploy/usim/: diskmaker  usim  usim.sh
service/src/chaos/: .gitignore  FILE.c  FILE.h  MINI.c  Makefile  README  chaos.c  chaos.h  chaosd.c  chlib.c  client.c  glob.c  log.c  node.c  server.c  transport.c
service/src/httpd/: http-chump-admin-always-nil.lisp  http-chump-admin.lisp  http.lisp  http.qfasl
service/src/usim/: .gitignore  CMakeLists.txt  Makefile  README  cadet.c  cadet.h  cc.c  cc.h  ccl.l  ccy.y  chaos.c  chaos.h  defmic78.h  defmic99.h  disass.c  disass.h  disass78.c  disass99.c  disk.c  disk.h  diskmaker.c  indent.pro  ini.c  ini.h  iob.c  iob.h  kbd.c  kbd.h  knight.c  knight.h  lcadmc.h  lcadrd.c  lcadrd.h  lmch.h  lmfs.c  lod.c  mem.c  mem.h  misc.c  misc.h  (+22 more)
service/src/worm_hole/: chaoslib.py  requirements.txt  worm_hole.py
